Fixed ligatures usage highlighted by the new wider letter-spacing

--- a/AgateDecorator/AgateDecorator.less
+++ b/AgateDecorator/AgateDecorator.less
@@ -23,6 +23,7 @@
 		font-family: @agate-base-font-family;
 		font-weight: @agate-base-font-weight;
 		font-size: @agate-base-font-size;
+		font-variant-ligatures: @agate-base-font-ligatures;
 		color: @agate-text-color;
 		background-color: @agate-bg-color;
 		background-image: @agate-bg-image;
