--- a/Button/Button.less
+++ b/Button/Button.less
@@ -10,6 +10,7 @@
 		font-weight: @agate-button-font-weight;
 		letter-spacing: @agate-button-letter-spacing;
 		text-indent: @agate-button-letter-spacing;  // Keep the text centered
+		font-variant-ligatures: @agate-button-font-ligatures;
 		min-width: @agate-button-height;
 		padding: 0 @agate-button-h-padding;
 		margin: 0 @agate-component-spacing;
