--- a/Divider/Divider.less
+++ b/Divider/Divider.less
@@ -12,6 +12,7 @@
 		font-size: @agate-divider-font-size;
 		text-transform: @agate-divider-text-transform;
 		letter-spacing: @agate-divider-letter-spacing;
+		font-variant-ligatures: @agate-divider-font-ligatures;
 
 		.icon {
 			margin: 0 @agate-component-spacing 0 0;
