--- a/styles/variables-copper.less
+++ b/styles/variables-copper.less
@@ -9,6 +9,7 @@
 @agate-base-font-family: "Source Sans Pro";
 @agate-base-font-size: 24px;
 @agate-base-font-weight: 400;
+@agate-base-font-ligatures: none;
 @agate-icon-font-family: "Moonstone Icons";
 @agate-component-spacing: 12px;
 
@@ -17,6 +18,7 @@
 @agate-button-height: 84px;
 @agate-button-font-weight: 700;
 @agate-button-letter-spacing: 9px;
+@agate-button-font-ligatures: @agate-base-font-ligatures;
 @agate-button-small-height: 60px;
 @agate-button-font-size: 27px;
 @agate-button-small-font-size: 21px;
@@ -58,6 +60,7 @@
 @agate-divider-text-transform: none;
 @agate-divider-icon-alignment: text-top;
 @agate-divider-letter-spacing: 12px;
+@agate-divider-font-ligatures: @agate-base-font-ligatures;
 
 // Drawer
 // ---------------------------------------
